# axum.code-maven.com

./: .gitignore  README.md  book.toml  check_examples.t  custom.js  ecosystem.pl
.github/workflows/: mdbook.yml  rust.yml
src/: SUMMARY.md  address-already-in-use.md  api-calculator.md  api-hello-world.md  api.md  askama-conditional.md  askama-filters.md  askama-header-footer.md  askama-hello-world.md  askama-include.md  askama-layout.md  askama-loop-variables.md  askama-loops.md  askama-safe.md  askama-struct.md  askama-templates.md  askama-unified-look.md  askama-variable.md  askama-vector-of-structs.md  axum-with-postgres.md  calculator-get.md  calculator-path.md  configuration-with-state.md  counter-with-cookie.md  custom-404-page.md  custom-response-struct.md  deploy-on-linode-running-ubuntu.md  deployment.md  echo-get.md  echo-post.md  ecosystem.md  embed-external-static-file-with-cache-buster.md  embed-external-static-file.md  embed-static-file.md  get-input-validation-minimum-length.md  goals.md  hello-html-world.md  hello-plain-world.md  hello-world-on-the-command-line.md  hello-world.md  (+30 more)
src/examples/api-calculator/src/: main.rs  tests.rs
src/examples/api-hello-world/: Cargo.toml
src/examples/api-hello-world/src/: main.rs  tests.rs
src/examples/askama-conditional/src/: main.rs  tests.rs
src/examples/askama-conditional/templates/: echo.html  main.html
src/examples/askama-header-footer/: Cargo.toml
src/examples/askama-header-footer/src/: main.rs  tests.rs
src/examples/askama-header-footer/templates/: base.html  content_with_title.html  main.html
src/examples/askama-hello-world/src/: main.rs  tests.rs
src/examples/askama-include/src/: tests.rs
src/examples/askama-include/templates/: echo.html  main.html
src/examples/askama-layout/src/: main.rs  tests.rs
src/examples/askama-loop-variables/: Cargo.toml
src/examples/askama-loops/src/: main.rs  (+1 more)
src/examples/calculator-get/: Cargo.toml
src/examples/calculator-path/: Cargo.toml
src/examples/config-with-state/: Cargo.toml  config.toml
src/examples/counter-with-cookies/: Cargo.toml
src/examples/custom-404-page/: Cargo.toml
src/examples/custom-response-struct/: Cargo.toml
src/examples/deploy/: axum-demo.code-maven.com  axum-demo.service
src/examples/echo-get/: Cargo.toml  README.md
src/examples/echo-post/: Cargo.toml  README.md
src/examples/echo-post/src/: main.rs  tests.rs
src/examples/embed-external-static-file/: Cargo.toml
src/examples/embed-external-static-file-with-cache-buster/: Cargo.toml
src/examples/embed-external-static-file-with-cache-buster/src/: main.rs  tests.rs
src/examples/embed-static-file/: Cargo.toml
src/examples/get-input-validation/: Cargo.toml
src/examples/get-input-validation/src/: main.rs  tests.rs
src/examples/head-request/: Cargo.toml
src/examples/hello-html-world/: Cargo.toml
src/examples/hello-plain-world/: Cargo.toml  README.md
src/examples/hello-world/: Cargo.toml
src/examples/logging/: Cargo.toml
src/examples/logging-to-file/: Cargo.toml  README.md
src/examples/logging-to-file/src/: main.rs  tests.rs
src/examples/meetup/: Cargo.toml
src/examples/minijinja-variable/: Cargo.toml
src/examples/nested-applications/: Cargo.toml  README.md
src/examples/nesting-applications/: Cargo.toml
src/examples/path-parameters/: Cargo.toml
src/examples/redirect/: Cargo.toml
src/examples/serving-static-files/: Cargo.toml
src/examples/serving-static-files/src/: main.rs  tests.rs
src/examples/set-content-type/: Cargo.toml
src/examples/sqlx-postgres/: Cargo.toml
src/examples/sqlx-postgres-multi-counter/: Cargo.toml  server.sh
src/examples/sqlx-postgres/src/: main.rs
src/examples/todo/: Cargo.toml
src/examples/todo/src/: main.rs  tests.rs
src/examples/todo/templates/: edit.html  main.html
src/examples/todo/templates/incl/: header.html
src/examples/versioning/: Cargo.toml
src/examples/versioning/src/: main.rs  tests.rs
src/examples/wildcard-path-parameters/: Cargo.toml
(+91 files in other folders)
